# rvrrrr

./: .gitignore  notebook.txt  package-lock.json  package.json  protocol.txt  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.gsd/: REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.gsd/research/: PITFALLS.md  STACK.md  SUMMARY.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md
crates/renderer/: Cargo.toml  README.md
crates/renderer/src/: ansi.rs  borders.rs  buffer.rs  colors.rs  diff.rs  input.rs  lib.rs  main.rs  protocol.rs  terminal.rs
crates/renderer/src/painter/: box_painter.rs  clip.rs  mod.rs  text_painter.rs
crates/renderer/tests/: pipeline.rs  render_cycle.rs
crates/renderer/tests/fixtures/: smoke.jsonl
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-x64-msvc/: package.json
src/: index.ts
src/bridge/: binary-resolver.ts  index.ts  ipc-child.ts  types.ts
src/components/: Box.tsx  Newline.tsx  Spacer.tsx  Static.tsx  Text.tsx  Transform.tsx  context.ts  index.ts  ink-jsx.d.ts
src/contexts/: app-context.ts  focus-context.ts  index.ts  stdin-context.ts
src/dom/: dom.ts  index.ts  types.ts
src/hooks/: index.ts  parse-keypress.ts  types.ts  use-app.ts  use-focus-manager.ts  use-focus.ts  use-input.ts  use-stdin.ts
src/layout/: get-max-width.ts  index.ts  measure-text.ts  sanitize-ansi.ts  squash-text-nodes.ts  styles.ts  wrap-text.ts
src/protocol/: errors.ts  index.ts  ndjson.ts  serialize.ts  types.ts
src/reconciler/: index.ts  reconciler.ts
src/render/: index.ts  measure-element.ts  output.ts  patch-console.ts  render-to-string.ts  render.ts  types.ts
src/util/: ansi-tokenizer.ts
test/: integration.test.tsx  layout.test.ts  measure-text.test.ts  reconciler.test.tsx
test/components/: box.test.tsx  newline-spacer-transform.test.tsx  text.test.tsx
(+42 files in other folders)
