[package]
name = "tui-engine-renderer"
version = "0.1.0"
edition = "2021"
description = "Terminal renderer for tui-engine — consumes widget JSON, paints via crossterm"

[[bin]]
name = "tui-engine-renderer"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "io-util", "io-std", "time", "macros"] }
unicode-width = "0.2"
ctrlc = { version = "3", features = ["termination"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"
