[package]
name = "tui-engine-renderer"
version = "0.1.0"
edition = "2021"
description = "Terminal renderer for tui-engine — consumes widget JSON, paints via crossterm"

[[bin]]
name = "tui-engine-renderer"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "macros"] }
unicode-width = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"
