[package]
name = "rvrrrr-renderer"
version = "0.1.0"
edition = "2021"
description = "Terminal renderer for rvrrrr — consumes widget JSON, paints via crossterm"
license = "MIT"
repository = "https://github.com/awawawawawwa/rvrrrr"
keywords = ["tui", "terminal", "renderer", "crossterm", "react"]
categories = ["command-line-interface", "rendering"]
readme = "README.md"
exclude = ["target/"]

[[bin]]
name = "rvrrrr-renderer"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "macros"] }
unicode-width = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"
